--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,6 +1,8 @@
 server:
  port: 9090
 spring:
+ profiles:
+  active: dev
   datasource:
    driver-class-name: org.h2.Driver
    url: jdbc:h2:file:~/pfe1
@@ -28,3 +30,10 @@ springdoc:
  swagger-ui:
   path: /swagger-ui.html
   enabled: true
+
+logging:
+  level:
+   root: INFO
+   com.pfe.AllTheTps: DEBUG
+   org.springframework: INFO
+
